Logo and Call for speakers

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <div class="wrapper">
       <div class="container-header">
         <header class="main-header">
-          <!--<h1 class="logo">Dev Fest Colombia</h1>-->
+          <h1 class="logo">Dev Fest Colombia</h1>
           <div class="wrapper-info-header">
             <p class="main-header__description">
               El festival de programación donde todas las comunidades son bienvenidas a dar una charla.
@@ -40,7 +40,7 @@
                 <span class="container-info__info__ruta-n">Ruta N</span>
                 <span class="container-info__info__place">Medellín, Colombia</span>
               </p>
-              <a target="_blank" href="https://ti.to/colombia-dev/devfest/with/wiz9890wt3u" class="container-info__button">
+              <a target="_blank" href="https://ti.to/colombia-dev/pataconf" class="container-info__button">
               <span>Reclama tu entrada gratis</span>
               </a>
             </div>
@@ -51,108 +51,14 @@
         <div id="agenda" class="agenda">
           <h2>Call for Speakers</h2>
           <p>
-            Para esta nueva version, tenemos una dinamica para seleccionar las
-            charlas que estaran en la agenda oficial del evento.
+            Desde la comunidad de Colombia Dev queremos hacer de PataConf un evento interesante,
+            informativo y revolucionario para aquellos que atiendan; por esta razón
+            los invitamos a que nos envíen sus propuestas de charlas.
           </p>
-          <p>
-            Debes revisar si el tema que deseas compartir con la comundiad se encuentra
-            entre los opciones que hemos selecionado. Luego de esto debes enviar un
-            Pull Request (PR) al <a href="#">repositorio oficial</a> de la comunidad, los PR con
-            mayor número de likes pasaran a ser evaluados por el comite quien definirá
-            cuales son finalmente las charlas selecionadas para la agenda.
-          </p>
-          <div class="table-wrapper">
-          </div>
+          <h3>Haz click aqui para
+            <a href="https://github.com/colombia-dev/cfp-pataconf">postular tu charla</a>
+          </h3>
         </div>
-        <div id="topics" class="topics">
-          <h2>Topics</h2>
-          <table class="wsite-multicol-table">
-            <tbody class="wsite-multicol-tbody">
-              <tr class="wsite-multicol-tr">
-                <td class="topic-td">
-                  <div class="paragraph" style="text-align:left;">
-                    <ul>
-                      <li>Agile Testing</li>
-                      <li>Dónde y cómo aprender Machine Learning</li>
-                      <li>¿Desarrollador o científico de datos?</li>
-                      <li>Deep Learning con TensorFlow</li>
-                      <li>Big Data</li>
-                      <li>Apache Hadoop</li>
-                      <li>HBase</li>
-                      <li>Storm</li>
-                      <li>Spark</li>
-                      <li>R (lenguaje de programación)</li>
-                      <li>Sistemas operativos para IOT</li>
-                      <li>Aplicaciones Embebidas para IoT</li>
-                      <li>RPi+OpenCV</li>
-                      <li>Docker</li>
-                      <li>GoCD</li>
-                      <li>Teamcity</li>
-                    </ul>
-                  </div>
-                </td>
-                <td class="topic-td">
-                  <div class="paragraph" style="text-align:left;">
-                    <ul>
-                      <li>Integración Continua & Entrega Continua</li>
-                      <li>Nomad</li>
-                      <li>DevOps Cloud </li>
-                      <li>Consul</li>
-                      <li>Vault</li>
-                      <li>Microservicios</li>
-                      <li>Environmental sustainability</li>
-                      <li>Information Architecture</li>
-                      <li>Lean UX</li>
-                      <li>Pruebas A/B</li>
-                      <li>Design Thinking</li>
-                      <li>Visualización de Datos</li>
-                      <li>NoSQL</li>
-                      <li>JAVA 8</li>
-                    </ul>
-                  </div>
-                </td>
-                <td class="topic-td">
-                  <div class="paragraph" style="text-align:left;">
-                    <ul>
-                      <li>Programacion Funcional</li>
-                      <li>Metaprogramming</li>
-                      <li>Concurrencia y Paralelismo</li>
-                      <li>Garbage Collectors</li>
-                      <li>Clean Code</li>
-                      <li>Unit Testing</li>
-                      <li>Escalabilidad de web apps</li>
-                      <li>Maps</li>
-                      <li>RoR</li>
-                      <li>LINQ</li>
-                      <li>.Net Core</li>
-                      <li>Xamarin</li>
-                      <li>Clojure</li>
-                      <li>Go Mobile</li>
-                      <li>Hybrid Apps: Ionic 2 VS Native Script VS React Native</li>
-                      <li>RxSwift</li>
-                      <li>Python and Django</li>
-                      <li>PHP7</li>
-                      <li>Apache Kafka</li>
-                    </ul>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <div class="table-wrapper">
-          </div>
-        </div>
-        <section class="devfest-content">
-          <p class="devfest-content__desc">
-            Suscríbete a nuestro mailing list y entérate de todas las actualizaciones con respecto a la conferencia: speakers, charlas, agenda y demás.
-          </p>
-          <form class="suscribe" action="//jsconf.us2.list-manage.com/subscribe/post?u=69218559b03fdf4ec80ae278a&amp;id=78640f7d04" method="post" name="mc-embedded-subscribe-form" target="_blank" id="mc-embedded-subscribe-form">
-            <input type="email" class="suscribe__input-text" name="EMAIL" required><input type="submit" class="suscribe__submit" value="Suscríbete" name="subscribe" id="mce-EMAIL">
-          </form>
-          <p class="suscribe-info">
-            o escríbenos a <a class="suscribe-info__email" href="mailto:hola@colombia-dev.org" target="_blank">hola@colombia-dev.org</a>
-          </p>
-        </section>
       </div>
       <div class="about-col-dev">
         <img class="about-col-dev-logo" src="/img/coldev.png" alt="Colombia.Dev">
