Delete the folder css file gitignore

--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <title>Colombia Dev Fest</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="public/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="public/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="public/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="public/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="public/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="public/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="public/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="public/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="public/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="public/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
+    <link rel="manifest" href="public/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="public/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="El festival de programación donde todas las comunidades son bienvenidas a dar una charla." />
-    <link rel="stylesheet" href="/css/screen.css?2">
+    <link rel="stylesheet" href="public/css/screen.css">
     <link href='https://fonts.googleapis.com/css?family=Bitter:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
@@ -61,13 +61,13 @@
         </div>
       </div>
       <div class="about-col-dev">
-        <img class="about-col-dev-logo" src="/img/coldev.png" alt="Colombia.Dev">
+        <img class="about-col-dev-logo" src="public/img/coldev.png" alt="Colombia.Dev">
         <p>Este evento es una iniciativa de <br> Colombia.dev</p>
       </div>
       <footer class="footer">
         <div class="container-elements-footer">
           <p class="footer__support">
-            ColombiaDevFest 2016. con el apoyo de <span class="ride-logo"></span> y <img src="/img/rutaNlogo.png" class="rutan-logo"></img>
+            ColombiaDevFest 2016. con el apoyo de <span class="ride-logo"></span> y <img src="public/img/rutaNlogo.png" class="rutan-logo"></img>
           </p>
           <p class="footer__follow-us">
             Síguenos en <a href="https://twitter.com/colombia_dev" target="_blank"><span>@colombia_dev</span></a>
@@ -77,6 +77,6 @@
       </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="/js/main.js?2"></script>
+    <script src="public/js/main.js?2"></script>
   </body>
 </html>
