rename title page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
-    <title>Colombia Dev Fest</title>
+    <title>Pataconf by Colombia Dev</title>
     <link rel="apple-touch-icon" sizes="57x57" href="public/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="public/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="public/apple-icon-72x72.png">
@@ -29,7 +29,7 @@
     <div class="wrapper">
       <div class="container-header">
         <header class="main-header">
-          <h1 class="logo">Dev Fest Colombia</h1>
+          <h1 class="logo">Pataconf Colombia</h1>
           <div class="wrapper-info-header">
             <p class="main-header__description">
               El festival de programación donde todas las comunidades son bienvenidas a dar una charla.
