Rename section CFP

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
       <div class="container-devfest-content">
         <div id="agenda" class="agenda">
-          <h2>Call for Speakers</h2>
+          <h2>Llamado a Conferencistas</h2>
           <p>
             Desde la comunidad de Colombia Dev queremos hacer de PataConf un evento interesante,
             informativo y revolucionario para aquellos que atiendan; por esta razón
