[remove] ride sponsorship

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <footer class="footer">
         <div class="container-elements-footer">
           <p class="footer__support">
-            ColombiaDevFest 2016. con el apoyo de <span class="ride-logo"></span> y <img src="public/img/rutaNlogo.png" class="rutan-logo"></img>
+            PataConf - con el apoyo de  <img src="public/img/rutaNlogo.png" class="rutan-logo"></img>
           </p>
           <p class="footer__follow-us">
             Síguenos en <a href="https://twitter.com/colombia_dev" target="_blank"><span>@colombia_dev</span></a>
