Reconfig gulp task

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <h1 class="logo">Pataconf Colombia</h1>
           <div class="wrapper-info-header">
             <p class="main-header__description">
-              El festival de programación donde todas las comunidades son bienvenidas a dar una charla.
+              El festival de programación donde las comunidades son bienvenidas a dar una charla.
             </p>
             <div class="container-info">
               <p class="container-info__info">
