--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <title>Pataconf by Colombia Dev</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="public/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="public/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="public/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="public/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="public/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="public/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="public/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="public/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="public/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="public/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
+    <link rel="manifest" href="public/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="public/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <meta name="description" content="El festival de programación donde todas las comunidades son bienvenidas a dar una charla." />
-    <link rel="stylesheet" href="css/screen.css">
+    <link rel="stylesheet" href="public/css/screen.css">
     <link href='https://fonts.googleapis.com/css?family=Bitter:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
@@ -47,7 +47,7 @@
     <div class="cfp">
       <h1 class="cfp__title">Llamado a Conferencistas</h1>
       <div class="cfp__container">
-        <img src="img/pataconf.png" alt="Pataconf" class="cfp__container__logo">
+        <img src="public/img/pataconf.png" alt="Pataconf" class="cfp__container__logo">
         <div class="cfp__container__info">
           <p class="cfp__container__info__description">Desde la comunidad <a href="http://colombia-dev.org" target="_blank">colombia-dev</a> queremos hacer de <strong>PataConf</strong> un evento interesante, informativo y revolucionario para aquellos que atiendan; por esta razón los invitamos a que nos envíen sus propuestas de charlas.</p>
           <a target="_blank" href="https://github.com/colombia-dev/cfp-pataconf" class="cfp__container__info__button">Postular mi charla</a>
@@ -58,10 +58,10 @@
     <footer class="footer">
       <div class="footer__colombia-dev">
         <p class="footer__colombia-dev__text">Este evento es una iniciativa de</p>
-        <img class="footer__colombia-dev__logo" src="img/coldev.png" alt="Colombia.Dev" />
+        <img class="footer__colombia-dev__logo" src="public/img/coldev.png" alt="Colombia.Dev" />
         <div class="footer__colombia-dev__ruta-n">
           <p class="footer__colombia-dev__ruta-n__text">Con el apoyo de</p>
-          <img src="img/rutaNlogo.png" alt="RutaN" class="footer__colombia-dev__ruta-n__logo" />
+          <img src="public/img/rutaNlogo.png" alt="RutaN" class="footer__colombia-dev__ruta-n__logo" />
         </div>
       </div>
       
@@ -72,6 +72,6 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="js/main.js?2"></script>
+    <script src="public/js/main.js?2"></script>
   </body>
 </html>
