Fix bad col.dev username in index.html

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
       <div class="footer__cod">Adoptamos el <a class="footer__cod__link" target="_blank" href="https://github.com/colombia-dev/codigo-de-conducta">código de conducta de Colombia.dev</a></div>
 
-      <p class="footer__follow-us">Síguenos en <a class="footer__follow-us__link" href="https://github.com/colombia_dev" target="_blank">@colombia_dev</a>
+      <p class="footer__follow-us">Síguenos en <a class="footer__follow-us__link" href="https://github.com/colombia-dev" target="_blank">@colombia-dev</a>
       </p>
     </footer>
 
