Mejora en la redaccion del parrafo de temas

--- a/index.html
+++ b/index.html
@@ -150,8 +150,11 @@
           <div class="col-sm-12 col-md-12 text-center">
             <h2>Algunos de los temas que nos interesan son:</h2>
             <p class="led">
-              No aceptamos ruby ni javascript, por que ya hay eventos para estos (
-              <a href="https://jsconf.co">jsconfco</a> y <a href="http://rubyconf.co">rubyconfco</a>).
+              Dado que nuestra ciudad tiene dos grandes eventos 
+              (<a href="https://jsconf.co">jsconfco</a> y <a href="http://rubyconf.co">rubyconfco</a>) 😱, 
+              buscamos diversidad, por eso queremos que las charlas propuestas incluyan cualquier 
+              tecnología (<i>excepto Ruby y Javascript</i>), metodologías y/o experiencias de vida en el mundo de 
+              la tecnología 👩‍🏫 👨‍🏫
             </p>
           </div>
         </div>
