Incluida aclaracion de cuando salen los tickets

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 <span class="btn__text">
                   Reclama tu entrada
                 </span>
+                <span class="label">12 Octubre</span>
               </a>
             </div>
           </div>
