Incluida aclaracion de cuando salen los tickets

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 <span class="btn__text">
                   Reclama tu entrada
                 </span>
+                <span class="label">12 Octubre</span>
               </a>
             </div>
           </div>
@@ -111,7 +112,7 @@
           <div class="col-xs-12 col-md-7">
             <h2>Un día para compartir conocimiento</h2>
             <p class="lead">
-              Durante todo este día las comunidades mas importante del país se reunen para dar sus charlas y compartir conocimiento.
+              Durante todo este día las comunidades mas importantes del país se reunen para dar sus charlas y compartir conocimiento.
             </p>
             <p class="lead">
               Una oportunidad única donde puedes ser tu, quien este frente de todos los participantes compartiendonos tus conocimientos
