Actualizacion boton de entradas

--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
               <p class="lead">
                 El festival de programación donde las comunidades son bienvenidas a dar una charla. Jueves 2 de noviembre, Ruta N.
               </p>
+              <a class="btn btn--primary type--uppercase" target="_blank"
+                href="https://ti.to/colombia-dev/pataconf-2017">
+                <span class="btn__text">
+                  Reclama tu entrada
+                </span>
+              </a>
             </div>
           </div>
           <div class="col-md-6 col-sm-4 col-xs-12">
@@ -105,7 +111,7 @@
         <div class="row">
           <div class="col-sm-12 text-center">
             <h3>
-              Entradas disponibles el 12 de octubre a las 9AM COT
+              El 23 de octubre a las 9AM COT tendremos la ultima tanda de entradas.
             </h3>
           </div>
         </div>
@@ -284,7 +290,7 @@
               </a>
               <p class="type--fine-print">
                 Fecha límite para eviar tu propuesta es
-                <strong>martes 16 de Octubre</strong>
+                <strong>lunes 16 de Octubre</strong>
               </p>
             </div>
           </div>
