--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </nav>
   </div>
   <div class="main-container">
-    <section id="home" class="cover height-100 imagebg switchable" data-overlay="1">
+    <section id="home" class="cover height-90 imagebg switchable" data-overlay="1">
       <div class="background-image-holder">
         <img alt="background" src="img/conference.png" />
       </div>
@@ -106,6 +106,17 @@
         </div>
       </div>
     </section>
+    <section class="cta cta-4 space--xxs">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            <h3>
+              El 27 de octubre a las 12M COT tendremos la ultima tanda de entradas.
+            </h3>
+          </div>
+        </div>
+      </div>
+    </section
     <section class="switchable bg--secondary">
       <div class="container">
         <div class="row">
