Primera version agenda 2017
Segunda version agenda 2017

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <a class="inner-link" href="#home">Home</a>
                 </li>
                 <li>
-                  <a class="inner-link" href="#topics">Temas</a>
+                  <a class="inner-link" href="#schedules">Agenda</a>
                 </li>
                 <li>
                   <a class="inner-link" href="#lugar">Lugar</a>
@@ -92,8 +92,7 @@
               <p class="lead">
                 El festival de programación donde las comunidades son bienvenidas a dar una charla. Jueves 2 de noviembre, Ruta N.
               </p>
-              <a class="btn btn--primary type--uppercase" target="_blank"
-                href="https://ti.to/colombia-dev/pataconf-2017">
+              <a class="btn btn--primary type--uppercase" target="_blank" href="https://ti.to/colombia-dev/pataconf-2017">
                 <span class="btn__text">
                   Reclama tu entrada
                 </span>
@@ -116,8 +115,210 @@
           </div>
         </div>
       </div>
-    </section
-    <section class="switchable bg--secondary">
+    </section>
+    <section id="schedules" class="switchable  bg--secondary">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="text-center">Agenda</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12 col-md-12">
+            <table class="border--round table--alternate-row">
+              <thead>
+                <tr>
+                  <th class="event-time">Hora</th>
+                  <th class="event-track">Track 1</th>
+                  <th class="event-track">Track 2</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td class="event-time">13:30</td>
+                  <td class="event-track">
+                    <div>
+                      <h5>Data viz: Construcción de un modelo de Thick Data </h5>
+                      <p>
+                        One of my biggest challenges working with clients, was to understand the impact of statistics. That’s why I decided to create
+                        a solution to converge the most important data in a solution. My passion for data analysis is also
+                        academic, that’s why i’m involved in an academic group focused in big data
+                      </p>
+                      <span class="author">
+                        <a href="http://www.marianvilla.co/">Marian Villa</a>
+                      </span>
+                    </div>
+                  </td>
+                  <td class="event-track">
+                    <div>
+                      <h5>I made my own Operating System and you can too</h5>
+                      <p>
+                        Years ago when I had no idea about software and OS development, I wanted to push myself to learn something useful for me.
+                        I started by OS development, it was hard and took me months and years to understand how complex is.
+                        This talk will teach and show people the correct way to hobby OS development
+                      </p>
+                      <span class="author">
+                        <a href="http://gioyik.com/">Giovanny Gongora</a>
+                      </span>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="event-time">14:00</td>
+                  <td class="event-track">
+                    <div>
+                      <h5>Cómo negociar equity con una startup y no morir en el intento</h5>
+                      <p>
+                        Descripcion por agregar
+                      </p>
+                      <span class="author">
+                        <a href="">Jessica Mercedes</a>
+                      </span>
+                    </div>
+                  </td>
+                  <td class="event-track">
+                    <div>
+                      <h5>Programacion funcional, aplicando modelado orientado a tipos con Kotlin</h5>
+                      <p>
+                        Kotlin y RxJava crean un gran combo para poder desarrollar aplicaciones Android, la charla expone una propuesta de arquitectura
+                        basada en eventos, tipos y operadores, con algunos toques de arquitectura limpia y creando un sistema
+                        que puede ser probado de manera simple.
+                      </p>
+                      <span class="author">
+                        <a href="https://medium.com/@iyubinest">Cristian Gomez</a>
+                      </span>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="event-time">14:30</td>
+                  <td class="event-track">
+                    <div>
+                      <h5>Si vamos a fallar hagamoslo con clase: Latencia y tolerancia a fallos con Hystrix </h5>
+                      <p>
+                        Los fallos son un elemento inevitable en un software, y en algunos casos no basta solo con capturarlos, en muchos casos es
+                        necesario ser proactivos y reaccionar frente a estos. En la charla presentaremos conceptos básicos
+                        en pro de la resilencia en apps aplicados en Hystrix librería usada en Netflix
+                      </p>
+                      <span class="author">Lex Martinez</span>
+                    </div>
+                  </td>
+                  <td class="event-track">
+                    <div>
+                      <h5>Algoritmos Evolutivos</h5>
+                      <p>
+                        Durante la charla hablaremos de algoritmos inspirados en los principios de evolución de Darwin para resolver problemas de
+                        búsqueda y optimización. En particular hablaremos de mutación, recombinación y selección de individuos
+                        de una población como una aproximación para encontrar soluciones candidatas
+                      </p>
+                      <span class="author">
+                        <a href="https://about.me/orendon">Oscar Rendon</a>
+                      </span>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="event-time">15:00</td>
+                  <td class="event-track">
+                    <div>
+                      <h5>Empleados remotos Vs Freelance</h5>
+                      <p>
+                        Descripcion por agregar
+                      </p>
+                      <span class="author">
+                        <a href="#">Lina Marín</a>
+                      </span>
+                    </div>
+                  </td>
+                  <td class="event-track">
+                    <div>
+                      <h5>Hablemos del Blockchain</h5>
+                      <p>
+                        Algunos consideran blockchain como la próxima revolución tecnológica o incluso el internet 3.0. Hay startups levantando millones
+                        de dólares con las ICO (inicial coin offering) y los gobiernos siguen preocupándose con el auge del
+                        Bitcoin. Una introducción al mundo de blockchain y las criptomonedas.
+                      </p>
+                      <span class="author">
+                        <a href="https://twitter.com/RamirezAlex_">Alex Ramirez</a>
+                      </span>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="event-time">15:30</td>
+                  <td class="event-track" colspan="2">
+                    <div>
+                      <h4 class="text-center">
+                        🎊 🇨🇴 🎉 PATACONES 🎊 🇨🇴 🎉
+                      </h4>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="event-time">16:00</td>
+                  <td class="event-track">
+                    <div>
+                      <h5>Mónadas para programadores programación funcional</h5>
+                      <p>
+                        La palabra de moda con la programación funcional es Mónada, y por mucho tiempo nos han hecho creer que solo los matemáticos
+                        pueden entender lo que son. ¡No es cierto! En esta charla hablaremos de Mónadas únicamente desde
+                        el punto de vista de programación para entender por qué son tan importantes.
+                      </p>
+                      <span class="author">
+                        <a href="https://twitter.com/gaijinco">Carlos Obregón</a>
+                      </span>
+                    </div>
+                  </td>
+                  <td class="event-track">
+                    <div>
+                      <h5>Comics with CSS Grid CSS, User Experience</h5>
+                      <p>
+                        CSS Grid has come to change the way we do layouts, simplify our lives and make the web more adaptable. A Comic book made
+                        with CSS Grid will give a snap shot of the power and flexibility of this CSS feature.
+                      </p>
+                      <span class="author">
+                        <a href="https://twitter.com/sebash93">Sebastian Hernández</a>
+                      </span>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="event-time">16:00</td>
+                  <td class="event-track">
+                    <div>
+                      <h5>(kotlin + design patterns) * ui tests = happy developers</h5>
+                      <p>
+                        Los tests hacen parte del code base de nuestros proyectos y por ende necesitamos hacerlos mantenibles. Hablaremos de como
+                        usando ciertos patrones de diseño como Screen Robots, Builder Pattern en conjunto con Kotlin pueden
+                        ayudarnos a tener unos tests de interfaz mas limpios y mantenibles.
+                      </p>
+                      <span class="author">
+                        <a href="https://github.com/caipivara">Daniel Gómez Rico</a>
+                      </span>
+                    </div>
+                  </td>
+                  <td class="event-track">
+                    <div>
+                      <h5>Una arquitectura de referencia para microservicios </h5>
+                      <p>
+                        Después de entregar un producto en producción con impacto en 74 países y trabajando con un equipo distribuido en 5 zonas
+                        horarias, llegamos a la conclusión que la arquitectura de referencia que utilizamos podría ser una
+                        buena forma de contarle a los asistentes nuestros aprendizajes.
+                      </p>
+                      <span class="author">
+                        <a href="https://yujikiriki.github.io/">Yuji Kiriki</a>
+                      </span>
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+
+    </section>
+    <section class="switchable">
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-7">
@@ -156,117 +357,7 @@
 
       </div>
     </section>
-    <section id="topics" class="switchable">
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-sm-12 col-md-12 text-center">
-            <h2>Algunos de los temas que nos interesan son:</h2>
-            <p class="led">
-              Dado que nuestra ciudad tiene dos grandes eventos (
-              <a href="https://jsconf.co">jsconfco</a> y <a href="http://rubyconf.co">rubyconfco</a>) 😱, buscamos diversidad,
-              por eso queremos que las charlas propuestas incluyan cualquier tecnología (<i>excepto Ruby y Javascript</i>),
-              metodologías y/o experiencias de vida en el mundo de la tecnología 👩‍🏫 👨‍🏫
-            </p>
-          </div>
-        </div>
-        <br><br>
-        <div class="row">
-          <div class="col-sm-12 col-md-4 col-xs-12">
-            <h6 class="type--uppercase">Temas Generales</h6>
-            <ul class="list">
-              <li>Programación Funcional</li>
-              <li>Microservicios</li>
-              <li>Concurrencia y Paralelismo</li>
-              <li>Machine Learning</li>
-              <li>Devops</li>
-            </ul>
-          </div>
-          <div class="col-sm-12 col-md-4 col-xs-12">
-            <h6 class="type--uppercase">Lenguajes de Programación</h6>
-            <ul class="list">
-              <li>Elixir/Erlang</li>
-              <li>Golang</li>
-              <li>Scala</li>
-              <li>Rust</li>
-              <li>Objective C</li>
-              <li>Swift</li>
-              <li>Kotlin</li>
-              <li>Clojure</li>
-            </ul>
-          </div>
-          <div class="col-sm-12 col-md-4 col-xs-12">
-            <h6 class="type--uppercase">Otros temas</h6>
-            <ul class="list">
-              <li>Algoritmos</li>
-              <li>Internet de las cosas</li>
-              <li>Desarrollo móvil</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-    </section>
-    <!--<section class="text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-            <h2>Meet the Marketers</h2>
-            <p class="lead">
-              Whether you’re building a welcome mat for your SaaS or a clean, corporate portfolio, Stack has your design needs covered.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="feature feature-8">
-              <img alt="Image" src="img/avatar-round-1.png" />
-              <h5>Vera Duncan</h5>
-              <span>Founder &amp; CEO</span>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="feature feature-8">
-              <img alt="Image" src="img/avatar-round-3.png" />
-              <h5>Zach Smith</h5>
-              <span>Co-Founder &amp; CTO</span>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="feature feature-8">
-              <img alt="Image" src="img/avatar-round-2.png" />
-              <h5>Bernice Lucas</h5>
-              <span>Chief of Operations</span>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="feature feature-8">
-              <img alt="Image" src="img/avatar-round-4.png" />
-              <h5>Cameron Nguyen</h5>
-              <span>Lead Designer</span>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="feature feature-8">
-              <img alt="Image" src="img/avatar-round-5.png" />
-              <h5>Josie Web</h5>
-              <span>Head of Development</span>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="feature feature-8">
-              <img alt="Image" src="img/avatar-round-6.png" />
-              <h5>Bryce Vaughn</h5>
-              <span>Marketing Director</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>-->
-    <section id="cfp" class="text-center bg--secondary">
+    <!--<section id="cfp" class="text-center bg--secondary">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12">
@@ -296,8 +387,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <section id="lugar" class="text-center">
+    </section>-->
+    <section id="lugar" class="text-center bg--secondary">
       <div class="container">
         <div class="row">
           <div class="col-sm-10 col-md-8">
@@ -309,7 +400,7 @@
         </div>
       </div>
     </section>
-    <section class="switchable ">
+    <section class="switchable bg--secondary">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-xs-12">
@@ -334,7 +425,7 @@
       </div>
 
     </section>
-    <section class="switchable text-center bg--secondary">
+    <section class="switchable text-center">
       <div class="container">
         <div class="row">
           <div class="col-sm-10 col-md-8">
@@ -351,7 +442,7 @@
       </div>
 
     </section>
-    <section class="text-center space--xs bg--secondary">
+    <section class="text-center space--xs">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -373,7 +464,7 @@
           <div class="col-sm-6">
             <img alt="Image" class="logo" src="img/coldev-logo.jpg" />
             <span class="type--fine-print">&copy;
-            <span class="update-year"></span> Colombia.dev</span>
+              <span class="update-year"></span> Colombia.dev</span>
           </div>
           <div class="col-sm-6 text-right text-center-xs">
             <ul class="social-list list-inline list--hover">
