--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
                 <nav>
                   <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/">CFS</a></li>
+                    <li>
+                      <a href="https://www.papercall.io/event-pataconf-2019" target="_blank" rel="noopener noreferrer">
+                        CFS
+                      </a>
+                    </li>
                   </ul>
                 </nav>
               </div>
@@ -53,9 +57,15 @@
           <div class="row">
             <div class="col-md-12 text-center">
               <div class="slider-content">
-                <h2>PATACONF 2019 <span>Octubre 5 - Medellin</span></h2>
-                <img src="./assets/img/pataconf.png" alt="pataconf" />
-                <h2><span>Call For Speakers</span></h2>
+                <h2>PATACONF 2019 <span>Octubre 12 - Medellin</span></h2>
+                <a href="https://www.papercall.io/event-pataconf-2019" target="_blank" rel="noopener noreferrer">
+                  <img src="./assets/img/pataconf.png" alt="pataconf" class="pataconf-logo" />
+                </a>
+                <h2>
+                  <a href="https://www.papercall.io/event-pataconf-2019" target="_blank" rel="noopener noreferrer">
+                    <span>Call For Speakers</span>
+                  </a>
+                </h2>
                 <div id="countdown"></div>
                 </form>
               </div>
