Add the link to tickets

--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
               <div class="main-menu">
                 <nav>
                   <ul>
-                    <li><a href="/">Home</a></li>
                     <li>
                       <a href="https://www.papercall.io/event-pataconf-2019" target="_blank" rel="noopener noreferrer">
                         CFS
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://ti.to/colombia-dev/pataconf-2019" target="_blank" rel="noopener noreferrer">
+                        Tickets
                       </a>
                     </li>
                   </ul>
@@ -57,8 +61,11 @@
           <div class="row">
             <div class="col-md-12 text-center">
               <div class="slider-content">
-                <h2>PATACONF 2019 <span>Octubre 12 - Medellin</span></h2>
-                <a href="https://www.papercall.io/event-pataconf-2019" target="_blank" rel="noopener noreferrer">
+                <a href="https://ti.to/colombia-dev/pataconf-2019" target="_blank" rel="noopener noreferrer">
+                  <h2>PATACONF 2019 <span>Octubre 12 - Medellin</span></h2>
+                </a>
+                <br />
+                <a href="https://ti.to/colombia-dev/pataconf-2019" target="_blank" rel="noopener noreferrer">
                   <img src="./assets/img/pataconf.png" alt="pataconf" class="pataconf-logo" />
                 </a>
                 <h2>
